--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/nextjs": "^6.31.6",
     "@reduxjs/toolkit": "^2.8.2",
     "antd": "^5.27.1",
+    "cloudinary": "^2.7.0",
     "dayjs": "^1.11.16",
     "mongoose": "^8.18.0",
     "next": "15.5.2",
