--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "antd": "^5.27.1",
     "cloudinary": "^2.7.0",
     "dayjs": "^1.11.16",
+    "emoji-picker-react": "^4.13.3",
     "mongoose": "^8.18.0",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-redux": "^9.2.0",
     "redux": "^5.0.1",
+    "remixicon": "^4.6.0",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
